# real-time-translator

./: .gitignore  README.md  file_12.opus  gui_test.py  pyproject.toml  requirements.md  ss  user_stories.md
.github/workflows/: python-app.yml
assets/input_text/: input.txt
assets/voices/: file_1.oga
real_time_translator/: X gui_classes.py  abc.txt  edit_text.py  gui-files-page.py  gui-main-page.py  gui.py  gui_classes.py  gui_files_page.py  gui_main_page.py  gui_page1.py  gui_page2.py  gui_page_input_file.py  gui_pages.py  gui_voice_page.py  imagetotext.py  input_image.py  input_text.py  input_text_manually.py  input_voice.py  languages.py  last.py  page1.py  page2.py  page3.py  real_time_translator.py  tg_bot.py  translator.py  voice.py
tests/: test_edit_text.py  test_imagetotext.py  test_input_image.py  test_input_text.py  test_input_text_manually.py  test_input_voice.py  test_real_time_translator.py  test_translator.py  test_voice.py
