[tool.poetry]
name = "real-time-translator"
version = "0.1.0"
description = ""
authors = ["Yahia Qous <yahiaqous@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytesseract = "^0.3.8"
pyttsx3 = "^2.90"
googletrans = "3.1.0a0"
Pillow = "^8.3.1"
opencv-python = "^4.5.3"
audiomath = "^1.15.4"
SpeechRecognition = "^3.8.1"
translate = "^3.6.1"
ffmpeg-python = "^0.2.0"
matplotlib = "^3.4.3"
telegram = "^0.0.1"
python-telegram-bot = "^13.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
